* doc/emacs/mule.texi (Input Methods): Copyedits. Use "^" for the postfix example, because it is less confusing inside Info's `quotes'.

--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -7,6 +7,8 @@
 	(Unibyte Mode): Update for "Disabling Multibyte" node name change.
 	Use Texinfo recommended convention for quotes+punctuation.
 	(Language Environments): Copyedits.
+	(Input Methods): Copyedits.  Use "^" for the postfix example,
+	because it is less confusing inside Info's `quotes'.
 
 	* custom.texi (Specifying File Variables):  Fix "unibyte" description.
 	Update for "Disabling Multibyte" node name change.
