textmodes/flyspell.el (flyspell-large-region): Specify encoding for hunspell with ("-i" ENCODING).
As done for ispell in in r107799, in flyspell-large-region we also need
to specify encoding for hunspell with ("-i" ENCODING), in 2 separate
command-line arguments, as expected by hunspell.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-04-12  Agustín Martín Domingo  <agustin.martin@hispalinux.es>
+
+	* textmodes/flyspell.el (flyspell-large-region): For hunspell, use
+	'("-i" ENCODING), in 2 separate command-line arguments, to specify
+	the encoding, as expected by hunspell.
+
 2012-04-12  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* battery.el (battery--linux-sysfs-regexp): New const.
