--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-12  Chong Yidong  <cyd@gnu.org>
+
+	* custom.el (custom-theme-set-variables): Doc fix.
+
 2012-04-12  Glenn Morris  <rgm@gnu.org>
 
 	* international/mule.el (set-auto-coding-for-load): Doc fix.
