--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,3 +1,13 @@
+2012-04-12  Eli Zaretskii  <eliz@gnu.org>
+
+	* makefile.w32-in (INFO_TARGETS, DVI_TARGETS, clean): Add emacs-gnutls.
+	($(infodir)/emacs-gnutls, emacs-gnutls.dvi): New targets.
+
+2012-04-12  Teodor Zlatanov  <tzz@lifelogs.com>
+
+	* emacs-gnutls.texi: Add documentation for the GnuTLS integration.
+	* Makefile.in: Add emacs-gnutls.texi to build.
+
 2012-04-11  Alan Mackenzie  <acm@muc.de>
 
 	* cc-mode.texi (c-offsets-alist): Correct a typo.
