--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-13  Kim F. Storm  <storm@cua.dk>
+
+	* emulation/cua-base.el (cua-exchange-point-and-mark): Just call
+	exchange-point-and-mark if cua-enable-cua-keys is nil (Bug#11191).
+
 2012-04-12  Chong Yidong  <cyd@gnu.org>
 
 	* custom.el (custom-theme-set-variables): Doc fix.
