--- a/etc/NEWS
+++ b/etc/NEWS
@@ -44,6 +44,9 @@ prompts for a column number.
 ** `mouse-avoidance-banish-position' can now be used to customize
 `mouse-avoidance-mode' further.
 
+** `C-M-f' and `C-M-b' will now move to the path name separator
+character when doing minibuffer filename prompts.
+
 
 * Changes in Specialized Modes and Packages in Emacs 24.2
 
